  build.xml updated according to the above
  distribution jars restructured, jminor-db-provider.jar split from jminor-client.jar and jminor-db.jar, jminor-server.jar no longer contains db, depends on jminor-db.jar instead, no more jar redundancies
  framework.db.local and framework.db.remote added, substantial refactoring involved
  distribution jars restructured further, jminor-db-provider.jar removed, jminor-db-core.jar, jminor-db-local.jar and jminor-db-remote.jar added
  DefaultEntityConnection renamed to LocalEntityConnection
  EntityConnections renamed to LocalEntityConnections
  distribution jars restructure even more, jminor-common.jar split into jminor-common-model.jar and jminor-common-ui.jar
  DatabaseConnection.setConnection() added
  LocalEntityConnections.setConnection() removed
  jminor-client-bundle.jar added to distribution
  resources/publish added, contains module definitions for publishing artifacts
  jminor-client-bundle added as publishing artifact
  UiUtil.selectValues() added
  Values, some minor changes in terminology
  Value.getChangeObserver() renamed to getObserver()
  EntityConnectionServer only runs connection maintenance when connections exist
  EntityConnectionServer.AuxiliaryServer moved to common.server.Server
  EntityRestServer no longer depends on framework server
  Util.getVersion() now caches the version object
  Util.VERSION is now final
  DefaultColumnProperty.setColumnName() bug fixed, did not set the value
  DefaultColumnProperty primitive value fetchers now only call ResultSet.wasNull() if the actual value warrants it
  DefaultDatabaseConnection, LocalEntityConnection, DatabaseUtil, DefaultRemoteEntityConnection, logAccess() and logExit() now return right away if the method logger is not enabled
  MethodLogger always clears log on enabled state change
  LocalEntityConnection bug fixed, select for update did not use selectTableName
  DefaultEntity.validateType() now validates entity types, added a couple of related tests